tests/compiler/computeCommentDirectiveInFirstLine/index.ts
const a: number = '42';
//~^ ERROR: Type 'string' is not assignable to type 'number'.

// // @ts-expect-error

// abc @ts-expect-error
